--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
+pip==24.2.0
+setuptools==69.5.0
+wheel==0.41.0
 fpdf==1.7.2
-matplotlib
+matplotlib==3.9.2
 pandas==2.0.3
 seaborn==0.13.2
 streamlit==1.39.0
 twilio==8.10.3
 bcrypt==3.2.0
-streamlit-option-menu
+streamlit-option-menu==0.3.13
 streamlit-aggrid==1.0.5
-plotly
+plotly==5.24.1
 numpy==1.23.5
+
 
