--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pip==24.2.0
-setuptools==69.5.0
-wheel==0.41.0
+pip>=24.2.0
+setuptools>=67.0.0
+wheel>=0.41.0
 fpdf==1.7.2
 matplotlib==3.9.2
 pandas==2.0.3
