--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ streamlit==1.39.0
 twilio==8.10.3
 bcrypt==3.2.0
 streamlit-option-menu==0.3.13
-streamlit-aggrid==1.0.5
+streamlit-aggrid>=1.0.5
 plotly==5.24.1
 numpy==1.25.0
 
