--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ setuptools>=67.0.0
 wheel>=0.41.0
 fpdf==1.7.2
 matplotlib==3.9.2
-pandas==2.0.3
+pandas
 seaborn==0.13.2
 streamlit==1.39.0
 twilio==8.10.3
@@ -11,7 +11,7 @@ bcrypt==3.2.0
 streamlit-option-menu==0.3.13
 streamlit-aggrid>=1.0.5
 plotly==5.24.1
-numpy==1.25.0
+
 
 
 
