--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-pip>=24.2.0
 setuptools>=67.0.0
 wheel>=0.41.0
 fpdf==1.7.2
 matplotlib==3.9.2
-pandas
+pandas>=1.3.0
 seaborn==0.13.2
-streamlit==1.39.0
+streamlit==1.22.0
 twilio==8.10.3
 bcrypt==3.2.0
-streamlit-option-menu
-streamlit-aggrid
+streamlit-option-menu==0.3.3
+streamlit-aggrid==0.3.3
 plotly==5.24.1
-sqlalchemy
-psycopg2-binary
+sqlalchemy>=1.4.0
+psycopg2-binary>=2.9.0
+
 
 
 
