--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ streamlit==1.22.0
 twilio==8.10.3
 bcrypt==3.2.0
 streamlit-option-menu==0.3.3
-streamlit-aggrid==0.3.3
+st-aggrid
 plotly==5.24.1
 sqlalchemy>=1.4.0
 psycopg2-binary>=2.9.0
