--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ seaborn==0.13.2
 streamlit==1.22.0
 twilio==8.10.3
 bcrypt==3.2.0
-streamlit-option-menu==0.3.3
+streamlit-option-menu
 st-aggrid
 plotly==5.24.1
 sqlalchemy>=1.4.0
