--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,11 @@ fpdf==1.7.2
 matplotlib==3.9.2
 pandas>=1.3.0
 seaborn==0.13.2
-streamlit==1.28.2
+streamlit
 twilio==8.10.3
 bcrypt==3.2.0
 streamlit-option-menu
-streamlit-aggrid==1.0.5
+streamlit-aggrid
 plotly==5.24.1
 sqlalchemy>=1.4.0
 psycopg2-binary
