--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ fpdf==1.7.2
 matplotlib==3.9.2
 pandas>=1.3.0
 seaborn==0.13.2
-streamlit
+streamlit==1.39.0
 twilio==8.10.3
 bcrypt==3.2.0
 streamlit-option-menu
