--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ bcrypt==3.2.0
 streamlit-option-menu
 streamlit-aggrid
 plotly==5.24.1
-sqlalchemy>=1.4.0
-psycopg2-binary
+sqlalchemy=2.0.35
+psycopg2-binary==2.9.9
 
 
 
