--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-wheel>=0.41.0
-fpdf==1.7.2
-matplotlib==3.9.2
-pandas>=1.3.0
-seaborn==0.13.2
-streamlit==1.39.0
+wheel
+fpdf
+matplotlib
+pandas
+seaborn
+streamlit
 twilio==8.10.3
-bcrypt==3.2.0
+bcrypt
 streamlit-option-menu
 streamlit-aggrid
-plotly==5.24.1
+plotly
 sqlalchemy
-psycopg2-binary==2.9.9
+psycopg2-binary
 
 
 
